# DeepSearch

./: .pre-commit-config.yaml  README.md  dev-setup.sh  enhanced_example.py  example.py  pyproject.toml
src/deepsearch/: __init__.py
src/deepsearch/ai/: README.md  __init__.py  ai_config.py  chunking.py  embedding_db.py
src/deepsearch/indexing/: README.md  __init__.py  config.py  enhanced_manager.py  extraction_standalone.py  extractor.py  indexer.py  logger.py  manager.py  models.py  watcher.py
src/deepsearch/search/: hybrid_search.py
src/deepsearch/utils/: __init__.py  file_utils.py
tests/: test_logging.py  test_system.py
